# gaussian-splatting-lightning

./: .gitignore  .gitmodules  LICENSE.md  README.md  apply_transform.py  gaussian_transform.py  generate_image_apperance_groups.py  generate_image_apperance_groups_by_exposure.py  generate_image_list.py  main.py  pyproject.toml  render.py  requirements-first.txt  requirements-second.txt  requirements.txt  seganygs.py  semantic.py  setup.py  viewer.py
configs/: .gitignore  appearance.yaml  background_removal.yaml  background_sphere-cameras_center-random_background.yaml  background_sphere.yaml  bilagrid.yaml  bilagrid_fused.yaml  blender.yaml  blender_gsplat.yaml  colmap_exp.yaml  ddp.yaml  ddp_not_find_unused.yaml  deformable_6dof_blender.yaml  deformable_6dof_real.yaml  deformable_blender.yaml  deformable_blender_rotate_xyz.yaml  deformable_real.yaml  distributed-accel.yaml  distributed.yaml  ds_splat.yaml  experiment.yaml  fused_ssim.yaml  glossy.yaml  gns.yaml  grad_acc.yaml  gsplat-absgrad-experiment.yaml  gsplat-absgrad.yaml  gsplat-matrixcity-aerial.yaml  gsplat-matrixcity-aerial_street-example.yaml  gsplat-mcmc.yaml  gsplat.yaml  gsplat_v1-accel-steerable.yaml  gsplat_v1-accel.yaml  gsplat_v1-accel_more.yaml  gsplat_v1-tile_based_culling-selective_adam.yaml  gsplat_v1-tile_based_culling.yaml  gsplat_v1.yaml  image_on_gpu-uint8.yaml  image_on_gpu.yaml  larger_dataset.yaml  (+20 more)
internal/: callbacks.py  cli.py  dataset.py  gaussian_splatting.py  mp_strategy.py  optimizers.py  render.py  renderers.py  schedulers.py  segany_splatting.py  semantic_splatting.py
notebooks/: colmap_split_v2.ipynb  context2colmap.ipynb  dji2pose.ipynb  foreground_first_density_controller_test.ipynb  gps_based_sfm_outlier_detection.ipynb  gsplat.ipynb  matrix_city_aerial_split.ipynb  matrix_city_split.ipynb  matrixcity2meganerf.ipynb  meganerf_rubble_split.ipynb  merge_partitions.ipynb  partition_light_gaussian_pruning.ipynb  prior_pose_guided_sfm.ipynb  prompt_segmenting.ipynb  prompt_segmenting_new.ipynb  rotate_shs.ipynb
requirements/: 2DGS.txt  SpotLessSplats.txt  StopThePop.txt  bilagrid.txt  common.txt  diff-accel-rasterization.txt  diff-surfel-rasterization.txt  fused-bilagrid.txt  fused-ssim.txt  gsplat.txt  lightning23.txt  lightning25.txt  pyt251_cu124.txt  pytorch3d-compile.txt  pytorch3d-pre.txt  pytorch3d-py39_cu118_pyt201.txt  sam.txt  tcnn.txt
scripts/: estimate_dataset_depths.slurm  get_sam_masks.slurm  run_da2.slurm  sd_feature_extraction.slurm  train-meganerf_rubble-partitions.slurm
submodules/: README.md
submodules/mcmc_relocation/: CMakeLists.txt  ext.cpp  mcmc_relocation.cu  setup.py
submodules/mcmc_relocation/mcmc_relocation/: __init__.py
tests/: .gitignore  ckpt2ply_test.py  deformable_model_test.py  density_controller_utils_test.py  freezable_parameter_dict_test.py  gaussian_containers_test.py  gaussian_model_test.py  gaussian_projection_test.py  network_factory_test.py  positional_encoding_test.py  sh_utils_test.py  vanilla_gaussian_model_test.py
utils/: PolyCam.md  argparser_utils.py  auto_hyper_parameter.py  ckpt2ply.py  colmap_undistort_mask.py  common.py  convert2splat.py  distibuted_tasks.py  edit_with_histories.py  estimate_dataset_depths.py  eval_blender.py  eval_mipnerf360.py  finetune_partition.py  finetune_pruned_partitions_v2.py  fuse_appearance_embeddings_into_shs_dc.py  fuse_mip_filter.py  gaussian_transform.py  generate_image_apperance_groups.py  generate_image_list.py  get_da3_depth_scales.py  get_depth_scales.py  get_sam_embeddings.py  get_sam_mask_scales.py  (+33 more)
(+246 files in other folders)
