[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["internal*", "utils*"]

[project]
name = "gaussian-splatting-lightning"
dynamic = ["version"]
requires-python = ">=3.8"

[project.scripts]
gs-fit = "internal.entrypoints.gspl:cli_fit"
gs-val = "internal.entrypoints.gspl:cli_val"
gs-test = "internal.entrypoints.gspl:cli_test"
gs-predict = "internal.entrypoints.gspl:cli_predict"

segany-fit = "internal.entrypoints.seganygs:cli_fit"
segany-val = "internal.entrypoints.seganygs:cli_val"
segany-test = "internal.entrypoints.seganygs:cli_test"
segany-predict = "internal.entrypoints.seganygs:cli_predict"

gs-viewer = "internal.entrypoints.viewer:cli"
